# kmeraz_bolt-bigcommerce-theme-updater

./: .dockerignore  .env-example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  action.yaml  action.yml  main.py  pyproject.toml  test-local.sh
.github/workflows/: example-merchant-workflow.yaml
example-theme/: config.json
test-output/assets/css/: theme.css
test-output/templates/components/cart/: preview.html
test-output/templates/layout/: base.html
test-output/templates/pages/: cart.html
