[project]
name = "bolt-bigcommerce-theme-updater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "openai>=1.97.0",
    "pip>=25.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
